# generate_curve

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
DEBUG/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
DEBUG/.cmake/api/v1/reply/: cache-v2-76b7b2f8b26674687e36.json  cmakeFiles-v1-3f8bc061766661842bea.json  codemodel-v2-67069be8245fb71f337d.json  index-2023-02-24T07-57-27-0599.json  target-bezierCurve-Debug-4b6cfa44c0e716f84fc8.json
DEBUG/work/: cmake_install.cmake
DEBUG/work/BezierCurve/shaders/BezierCurve/: fragment.frag  vertex.vert
sources/shaders/BezierCurve/: fragment.frag  vertex.vert
work/: CMakeLists.txt
work/BezierCurve/: BezierCurveData.h  CMakeLists.txt  generateBezierCurve.h  main.cpp
work/Headers/: FileReader.h  Shader.h  Vertex.h
