CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

SET(PROJECT_NAME Bezier_curve)

PROJECT(${PROJECT_NAME} LANGUAGES CXX)

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.* )

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(glfw3 CONFIG REQUIRED)
FIND_PACKAGE(glad CONFIG REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE glfw glad::glad)








