set(target_ bezierCurve)

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.*)

FIND_PACKAGE(glfw3 CONFIG REQUIRED)
FIND_PACKAGE(glad CONFIG REQUIRED)
FIND_PACKAGE(glm CONFIG REQUIRED)

ADD_EXECUTABLE(${target_} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${target_} PRIVATE glfw glad::glad glm::glm)

target_include_directories(${target_}
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../Headers
)

FILE(COPY ${PROJECT_SOURCE_DIR}/sources/ DESTINATION ${${CMAKE_CURRENT_BINARY_DIR}}/)
